--- a/Example 1 - Using Loop's Sources.ipynb
+++ b/Example 1 - Using Loop's Sources.ipynb
@@ -25,9 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
@@ -71,9 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -168,7 +164,7 @@
    "outputs": [],
    "source": [
     "# Save raw map data to local zipped shapefiles\n",
-    "proj.save_mapdata_to_files(\".\\output_files\",\".shp.zip\")"
+    "proj.save_mapdata_to_files(\"output_files\",\".shp.zip\")\n"
    ]
   },
   {
@@ -215,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
