Added example 3 for local datasets and minor formating changes to example 2

--- a/Example 2 - Draw Your Own Area.ipynb
+++ b/Example 2 - Draw Your Own Area.ipynb
@@ -129,8 +129,6 @@
     "        bbox_geom = Polygon(zip(lon_point_list, lat_point_list))\n",
     "        rect = gpd.GeoDataFrame(index=[0], crs=src_crs, geometry=[bbox_geom]) \n",
     "\n",
-    "    \n",
-    "\n",
     "    bbox2=str(minx)+\",\"+str(miny)+\",\"+str(maxx)+\",\"+str(maxy)\n",
     "    y_point_list = [miny, miny, maxy, maxy, maxy]\n",
     "    x_point_list = [minx, maxx, maxx, minx, minx]\n",
@@ -157,10 +155,8 @@
     "else:\n",
     "    center=(-22.6,117.3)\n",
     "\n",
-    "    \n",
-    "m =leafmap.Map( center=center, zoom=8,scroll_wheel_zoom=True)\n",
+    "m = leafmap.Map( center=center, zoom=8,scroll_wheel_zoom=True)\n",
     "m.add_basemap( basemap='OpenTopoMap')\n",
-    "\n",
     "m.add_wms_layer(url='https://www.loopwms.xyz/geoserver/loop/wms?',\n",
     "    layers='2_5m_interpgeop15_4326',\n",
     "    format='image/png',\n",
@@ -169,7 +165,7 @@
     "    attribution='Geology data from GSWA',\n",
     "    name='geology',\n",
     "    shown=True)\n",
-    "aurl='https://www.loopwms.xyz/geoserver/loop/wms?'\n",
+    "# url = 'https://www.loopwms.xyz/geoserver/loop/wms?'\n",
     "m.add_wms_layer(url='https://www.loopwms.xyz/geoserver/loop/wms?',\n",
     "    layers='2_5m_interpstrucl15_4326',\n",
     "    format='image/png',\n",
@@ -177,7 +173,6 @@
     "    opacity=0.4,\n",
     "    attribution='Linear features data from GSWA',\n",
     "    name='faults/folds')\n",
-    "\n",
     "m.add_wms_layer(url='https://www.loopwms.xyz/geoserver/loop/wms?',\n",
     "    layers='waroxi_wa_4326_bed',\n",
     "    format='image/png',\n",
@@ -189,8 +184,7 @@
     "\n",
     "if( not test_data_name =='Draw Your Own'):\n",
     "    m.add_gdf(rect, layer_name=\"Last Rectangle\", \n",
-    "                   fill_colors=['orange'])\n",
-    "m"
+    "                   fill_colors=['orange'])\n"
    ]
   },
   {
@@ -224,7 +218,6 @@
     "        roi_clip_path=''\n",
     "\n",
     "    bounds=(minlong,maxlong,minlat,maxlat)\n",
-    "\n",
     "\n",
     "    lat_point_list = [minlat, minlat, maxlat, maxlat,maxlat]\n",
     "    lon_point_list = [minlong, maxlong, maxlong, minlong, minlong]\n",
@@ -380,14 +373,15 @@
     "# f.write(ostr)\n",
     "# f.close()\n",
     "\n",
-    "\n",
-    "fault_params = {'interpolatortype':'FDI',\n",
-    "                 'nelements':1e4,\n",
-    "                }\n",
-    "foliation_params = {'interpolatortype':'FDI' , # 'interpolatortype':'PLI',\n",
-    "                    'nelements':1e5,  # how many tetras/voxels\n",
-    "                    'regularisation':5,\n",
-    "                    }\n",
+    "fault_params = {\n",
+    "    'interpolatortype':'FDI',\n",
+    "    'nelements':1e4,\n",
+    "}\n",
+    "foliation_params = {\n",
+    "    'interpolatortype':'FDI' , # 'interpolatortype':'PLI',\n",
+    "    'nelements':1e5,  # how many tetras/voxels\n",
+    "    'regularisation':5,\n",
+    "}\n",
     "projFile = LPF.ProjectFile(loop_project_filename)\n",
     "processedData = LPFProcessor(projFile)\n",
     "processedData.foliation_properties['sg'] = foliation_params\n",
@@ -395,9 +389,6 @@
     "processedData.fault_properties['nelements'] = fault_params['nelements']\n",
     "model = LoopStructural.GeologicalModel.from_processor(processedData)\n",
     "model.update()\n",
-    "                                       \n",
-    "#model.to_file(output_path + \"/model.pickle\")\n",
-    "\n",
     "\n",
     "# clip_on_dtm=True\n",
     "# if(clip_on_dtm):\n",
@@ -410,7 +401,6 @@
     "\n",
     "view = LavaVuModelViewer(model) \n",
     "view.nsteps = np.array([200,200,200])\n",
-    "view.nsteps=np.array([50,50,50])\n",
     "for sg in model.feature_name_index:\n",
     "    if( 'super' in sg):\n",
     "        view.add_data(model.features[model.feature_name_index[sg]])\n",
