updated notebooks for neweset version of map2loop 3

--- a/Example 1 - Using Loop's Sources.ipynb
+++ b/Example 1 - Using Loop's Sources.ipynb
@@ -32,6 +32,7 @@
     "import os\n",
     "from map2loop.project import Project\n",
     "from map2loop.m2l_enums import VerboseLevel\n",
+    "from map2loop.sorter import SorterAlpha, SorterAgeBased\n",
     "from datetime import datetime\n",
     "\n",
     "\n",
@@ -39,11 +40,11 @@
     "\n",
     "bbox_3d = { # region of interest for GMD paper\n",
     "    \"minx\": 515687.31005864,\n",
-    "    \"miny\": 7473446.76593407,\n",
+    "    \"miny\": 7493446.76593407,\n",
     "    \"maxx\": 562666.860106543,\n",
     "    \"maxy\": 7521273.57407786,\n",
     "    \"base\": -3200,\n",
-    "    \"top\": 0,\n",
+    "    \"top\": 3000,\n",
     "}\n",
     "loop_project_filename=\"wa_output.loop3d\"\n",
     "\n",
@@ -54,8 +55,9 @@
     "    verbose_level = VerboseLevel.NONE,\n",
     "    loop_project_filename = loop_project_filename\n",
     ")\n",
-    "\n",
-    "proj.run_all()\n",
+    "proj.set_sorter(SorterAlpha())\n",
+    "# proj.set_sorter(SorterAgeBased())\n",
+    "proj.run_all(take_best=True)\n",
     "t1 = time.time()"
    ]
   },
@@ -69,15 +71,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import LoopProjectFile as LPF\n",
     "import LoopStructural\n",
     "from LoopStructural.visualisation import LavaVuModelViewer\n",
     "from LoopStructural.modelling.input.project_file import LoopProjectfileProcessor as LPFProcessor\n",
     "\n",
+    "from scipy.interpolate import RegularGridInterpolator\n",
+    "from osgeo import gdal\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "# LoopStructural Modelling\n",
     "t2 = time.time()\n",
@@ -98,11 +105,29 @@
     "\n",
     "model = LoopStructural.GeologicalModel.from_processor(processedData)\n",
     "model.update()\n",
+    "model.nsteps=np.array([2000,2000,200])\n",
+    "\n",
+    "clip_on_dtm=True\n",
+    "if(clip_on_dtm):\n",
+    "    bounding_box = proj.map_data.get_bounding_box()\n",
+    "    minx = bounding_box['minx']\n",
+    "    maxx = bounding_box['maxx']\n",
+    "    miny = bounding_box['miny']\n",
+    "    maxy = bounding_box['maxy']\n",
+    "    model_base = bounding_box['base']\n",
+    "    model_top = bounding_box['top']\n",
+    "    dtm = gdal.Open(os.path.join(\"m2l_data_tmp\", \"StupidGDALLocalFile.tif\"))\n",
+    "    dtm_val = dtm.GetRasterBand(1).ReadAsArray().T\n",
+    "    # Convert bounds to gdal raster bounds\n",
+    "    x = np.linspace(minx, maxx, dtm_val.shape[0])\n",
+    "    y = np.linspace(maxy, miny, dtm_val.shape[1])\n",
+    "    dtm_interpolator = RegularGridInterpolator((x,y), dtm_val)\n",
+    "    model.dtm = lambda xyz : dtm_interpolator(xyz[:,:2])\n",
     "\n",
     "# Lavavu viewer\n",
     "filename = os.path.join('.','vtk','surface_name_{}.vtk')\n",
     "view = LavaVuModelViewer(model)\n",
-    "view.nsteps=np.array([50,50,50])\n",
+    "view.nsteps=np.array([200,200,200])\n",
     "for sg in model.feature_name_index:\n",
     "    if( 'super' in sg):\n",
     "        view.add_data(model.features[model.feature_name_index[sg]])\n",
@@ -111,6 +136,10 @@
     "view.nelements=1e6\n",
     "view.add_model_surfaces(filename=filename,strati=False,displacement_cmap = 'rainbow')\n",
     "view.nsteps = np.array([200,200,200])\n",
+    "if(clip_on_dtm):\n",
+    "    colours = list(pd.DataFrame(data=proj.stratigraphic_column.column,columns=[\"name\"]).merge(proj.stratigraphic_column.stratigraphicUnits[[\"name\",\"colour\"]], on=\"name\")[\"colour\"])\n",
+    "    colours.reverse()\n",
+    "    view.add_dtm(paint_with=lambda xyz: model.evaluate_model(xyz,scale=False), cmap=colours)\n",
     "view.add_model()\n",
     "\n",
     "view.lv.control.Range('alpha', label=\"Global Opacity\")\n",
@@ -174,7 +203,7 @@
    "outputs": [],
    "source": [
     "# Draw overlay of point data on geology map (can also try 'contacts','orientations','faults')\n",
-    "proj.draw_geology_map(overlay=\"faults\")"
+    "proj.draw_geology_map(overlay=\"basal_contacts\")"
    ]
   },
   {
@@ -183,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract estimate of the stratigraphic column\n",
+    "# Extract map2loop estimate of the stratigraphic column\n",
     "print(proj.stratigraphic_column.column)"
    ]
   },
@@ -211,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
