--- a/Example 3 - Local Source Data.ipynb
+++ b/Example 3 - Local Source Data.ipynb
@@ -26,7 +26,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -34,6 +36,7 @@
     "from map2loop.m2l_enums import VerboseLevel\n",
     "from map2loop.m2l_enums import Datatype\n",
     "from map2loop.sampler import SamplerSpacing, SamplerDecimator\n",
+    "from map2loop.sorter import SorterUseHint, SorterUseNetworkX, SorterAgeBased, SorterAlpha\n",
     "import time\n",
     "\n",
     "from datetime import datetime\n",
@@ -70,10 +73,28 @@
     "proj.set_sampler(Datatype.GEOLOGY, SamplerSpacing(50.0))\n",
     "proj.set_sampler(Datatype.STRUCTURE, SamplerDecimator(2))\n",
     "proj.map_data.config.geology_config[\"intrusive_text\"] = \"mafic intrusive\"\n",
+    "proj.set_ignore_codes([\"cover\", \"Fortescue_Group\", \"A_FO_od\"])\n",
     "\n",
-    "# %load_ext snakeviz\n",
-    "# %snakeviz proj.run()\n",
-    "proj.run_all()\n",
+    "column = [\n",
+    "    # youngest\n",
+    "    'Turee_Creek_Group',\n",
+    "    'Boolgeeda_Iron_Formation',\n",
+    "    'Woongarra_Rhyolite',\n",
+    "    'Weeli_Wolli_Formation',\n",
+    "    'Brockman_Iron_Formation',\n",
+    "    'Mount_McRae_Shale_and_Mount_Sylvia_Formation',\n",
+    "    'Wittenoom_Formation',\n",
+    "    'Marra_Mamba_Iron_Formation',\n",
+    "    'Jeerinah_Formation',\n",
+    "    'Bunjinah_Formation',\n",
+    "    'Pyradie_Formation',\n",
+    "    'Fortescue_Group',\n",
+    "    # oldest\n",
+    "]\n",
+    "# proj.set_sorter(SorterUseNetworkX())\n",
+    "proj.set_sorter(SorterAlpha())\n",
+    "proj.run_all(take_best=True)\n",
+    "# proj.run_all(user_defined_stratigraphic_column=column)\n",
     "\n",
     "t1 = time.time()"
    ]
@@ -88,7 +109,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "import LoopProjectFile as LPF\n",
@@ -96,6 +119,9 @@
     "from LoopStructural.modelling.input.project_file import LoopProjectfileProcessor as LPFProcessor\n",
     "import LoopStructural\n",
     "import numpy as np\n",
+    "from scipy.interpolate import RegularGridInterpolator\n",
+    "from osgeo import gdal\n",
+    "import pandas as pd\n",
     "\n",
     "t2 = time.time()\n",
     "\n",
@@ -119,6 +145,23 @@
     "model = LoopStructural.GeologicalModel.from_processor(processedData)\n",
     "model.update()\n",
     "\n",
+    "clip_on_dtm=True\n",
+    "if(clip_on_dtm):\n",
+    "    bounding_box = proj.map_data.get_bounding_box()\n",
+    "    minx = bounding_box['minx']\n",
+    "    maxx = bounding_box['maxx']\n",
+    "    miny = bounding_box['miny']\n",
+    "    maxy = bounding_box['maxy']\n",
+    "    model_base = bounding_box['base']\n",
+    "    model_top = bounding_box['top']\n",
+    "    dtm = gdal.Open(os.path.join(\"m2l_data_tmp\", \"StupidGDALLocalFile.tif\"))\n",
+    "    dtm_val = dtm.GetRasterBand(1).ReadAsArray().T\n",
+    "    # Convert bounds to gdal raster bounds\n",
+    "    x=np.linspace(minx,maxx,dtm_val.shape[0])\n",
+    "    y=np.linspace(miny,maxy,dtm_val.shape[0])\n",
+    "    dtm_interpolator = RegularGridInterpolator((x,y),dtm_val)\n",
+    "    model.dtm = lambda xyz : dtm_interpolator(xyz[:,:2])\n",
+    "\n",
     "vtk_path = model_name+'/vtk/'\n",
     "filename = os.path.join(model_name,'vtk','surface_name_{}.vtk')\n",
     "view = LavaVuModelViewer(model)\n",
@@ -132,7 +175,10 @@
     "view.add_model_surfaces(filename=filename,strati=False,displacement_cmap = 'rainbow')\n",
     "view.lv.webgl(vtk_path+model_name)\n",
     "view.nsteps = np.array([200,200,200])\n",
-    "\n",
+    "if(clip_on_dtm):\n",
+    "    colours = list(pd.DataFrame(data=proj.stratigraphic_column.column,columns=[\"name\"]).merge(proj.stratigraphic_column.stratigraphicUnits[[\"name\",\"colour\"]], on=\"name\")[\"colour\"])\n",
+    "    colours.reverse()\n",
+    "    view.add_dtm(paint_with=lambda xyz: model.evaluate_model(xyz,scale=False), cmap=colours)\n",
     "view.add_model()\n",
     "\n",
     "view.lv.control.Range('alpha', label=\"Global Opacity\")\n",
@@ -175,6 +221,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Draw overlay of point data on geology map\n",
+    "# (options are 'basal_contacts', contacts','orientations','faults')\n",
+    "proj.draw_geology_map(overlay=\"basal_contacts\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract estimate of the stratigraphic column\n",
+    "print(proj.stratigraphic_column.column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -194,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
