--- a/Example 2 - Draw Your Own Area.ipynb
+++ b/Example 2 - Draw Your Own Area.ipynb
@@ -307,7 +307,15 @@
     "dtm_path=model_name+'/dtm/'\n",
     "vtk_path=model_name+'/vtk/'\n",
     "if not os.path.exists(vtk_path):\n",
-    "    os.mkdir(vtk_path)\n"
+    "    os.mkdir(vtk_path)\n",
+    "\n",
+    "bounding_box = proj.map_data.get_bounding_box()\n",
+    "minx = bounding_box['minx']\n",
+    "maxx = bounding_box['maxx']\n",
+    "miny = bounding_box['miny']\n",
+    "maxy = bounding_box['maxy']\n",
+    "model_base = bounding_box['base']\n",
+    "model_top = bounding_box['top']"
    ]
   },
   {
@@ -334,6 +342,7 @@
     "# from map2loop.map import MapUtil\n",
     "# import rasterio\n",
     "from scipy.interpolate import RegularGridInterpolator\n",
+    "from osgeo import gdal\n",
     "\n",
     "surface_verts = {}\n",
     "\n",
@@ -348,30 +357,9 @@
     "    xyz = xyz[nanmask,:]\n",
     "    surface_verts[name] = (xyz,tri)\n",
     "    \n",
-    "# def mask(xyz): # for clipping strat to surface dtm\n",
-    "#     from map2loop.map import MapUtil\n",
-    "#     import rasterio\n",
-    "#     import os\n",
-    "#     dtm_map = MapUtil(proj.config.bbox_3d,dtm=rasterio.open(os.path.join(dtm_path,'dtm_rp.tif')))\n",
-    "#     xyz=model.rescale(xyz,inplace=False)\n",
-    "#     dtmv = dtm_map.evaluate_dtm_at_points((xyz[:,:2]))\n",
-    "#     return xyz[:,2]<dtmv\n",
-    "\n",
-    "\n",
-    "\n",
     "t2 = time.time()\n",
     "\n",
     "filename=vtk_path+'/'+'surface_name_{}.vtk'\n",
-    "\n",
-    "# save_dtm_mesh(dtm_path,vtk_path)\n",
-    "\n",
-    "# save_dtm_ascii(dtm_path)\n",
-    "               \n",
-    "# f=open(tmp_path+'/bbox.csv','w')\n",
-    "# f.write('minx,miny,maxx,maxy,lower,upper\\n')\n",
-    "# ostr='{},{},{},{},{},{}\\n'.format(minx,miny,maxx,maxy,model_base,model_top)\n",
-    "# f.write(ostr)\n",
-    "# f.close()\n",
     "\n",
     "fault_params = {\n",
     "    'interpolatortype':'FDI',\n",
@@ -390,14 +378,15 @@
     "model = LoopStructural.GeologicalModel.from_processor(processedData)\n",
     "model.update()\n",
     "\n",
-    "# clip_on_dtm=True\n",
-    "# if(clip_on_dtm):\n",
-    "#     dtm = rasterio.open(dtm_path+'/dtm_rp.tif')\n",
-    "#     dtm_val = dtm.read(1)\n",
-    "#     x=np.linspace(dtm.bounds[0],dtm.bounds[2],dtm_val.shape[1])\n",
-    "#     y=np.linspace(dtm.bounds[1],dtm.bounds[3],dtm_val.shape[0])\n",
-    "#     dtm_interpolator = RegularGridInterpolator((x,y),np.rot90(dtm_val,3))\n",
-    "#     model.dtm = lambda xyz : dtm_interpolator(xyz[:,:2])\n",
+    "clip_on_dtm=True\n",
+    "if(clip_on_dtm):\n",
+    "    dtm = gdal.Open(os.path.join(model_name, \"StupidGDALLocalFile.tif\"))\n",
+    "    dtm_val = dtm.GetRasterBand(1).ReadAsArray().T\n",
+    "    # Convert bounds to gdal raster bounds\n",
+    "    x=np.linspace(minx,maxx,dtm_val.shape[0])\n",
+    "    y=np.linspace(miny,maxy,dtm_val.shape[0])\n",
+    "    dtm_interpolator = RegularGridInterpolator((x,y),dtm_val)\n",
+    "    model.dtm = lambda xyz : dtm_interpolator(xyz[:,:2])\n",
     "\n",
     "view = LavaVuModelViewer(model) \n",
     "view.nsteps = np.array([200,200,200])\n",
@@ -408,7 +397,10 @@
     "view.add_model_surfaces(function=function,filename=filename,faults=False)\n",
     "view.nelements=1e6\n",
     "view.add_model_surfaces(function=function,filename=filename,strati=False,displacement_cmap = 'rainbow')\n",
-    "# view.add_dtm()\n",
+    "if(clip_on_dtm):\n",
+    "    colours = list(pd.DataFrame(data=proj.stratigraphic_column.column,columns=[\"name\"]).merge(proj.stratigraphic_column.stratigraphicUnits[[\"name\",\"colour\"]], on=\"name\")[\"colour\"])\n",
+    "    colours.reverse()\n",
+    "    view.add_dtm(paint_with=lambda xyz: model.evaluate_model(xyz,scale=False), cmap=colours)\n",
     "view.lv.webgl(vtk_path+model_name)\n",
     "view.nsteps = np.array([200,200,200])\n",
     "view.add_model()\n",
@@ -482,13 +474,6 @@
    "source": [
     "save_voxels=True\n",
     "if (save_voxels):\n",
-    "    bounding_box = proj.map_data.get_bounding_box()\n",
-    "    minx = bounding_box['minx']\n",
-    "    maxx = bounding_box['maxx']\n",
-    "    miny = bounding_box['miny']\n",
-    "    maxy = bounding_box['maxy']\n",
-    "    model_base = bounding_box['base']\n",
-    "    model_top = bounding_box['top']\n",
     "    voxel_size = 500\n",
     "    sizex = int((maxx - minx)/voxel_size)\n",
     "    sizey = int((maxy - miny)/voxel_size)\n",
@@ -584,10 +569,19 @@
     "    print(\"colour map saved as:\",obj_path_dir+'/loop_colour_map.clr')\n",
     "\n",
     "\n",
-    "save_GA=True\n",
+    "save_GA=False\n",
     "\n",
     "if(save_GA):\n",
     "    geoh5_create_surface_data(vtk_path,proj.map_data.tmp_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "view.interactive()"
    ]
   },
   {
@@ -614,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
