Update with comments for new sorters and options

--- a/Example 2 - Draw Your Own Area.ipynb
+++ b/Example 2 - Draw Your Own Area.ipynb
@@ -22,8 +22,8 @@
    "outputs": [],
    "source": [
     "#if not already installed:\n",
-    "#!conda install -c loop3d map2loop loopstructural\n",
-    "#!conda install -c conda-forge leafmap ipyleaflet ipywidgets meshio -y\n",
+    "#!conda install -c loop3d map2loop loopstructural pyamg meshio\n",
+    "#!conda install -c conda-forge leafmap ipyleaflet ipywidgets -y\n",
     "# and\n",
     "#!pip install geoh5py\n",
     "# may need to restart jupyter server\n",
@@ -608,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
