--- a/Example 1 - Using Loop's Sources.ipynb
+++ b/Example 1 - Using Loop's Sources.ipynb
@@ -16,6 +16,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#if not already installed:\n",
+    "#!conda install -c loop3d map2loop loopstructural pyamg meshio"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,14 +41,16 @@
     "import time\n",
     "import os\n",
     "from map2loop.project import Project\n",
-    "from map2loop.m2l_enums import VerboseLevel\n",
-    "from map2loop.sorter import SorterAlpha, SorterAgeBased\n",
+    "from map2loop.m2l_enums import VerboseLevel, Datatype\n",
+    "from map2loop.sorter import SorterAlpha, SorterAgeBased, SorterUseHint, SorterUseNetworkX, SorterMaximiseContacts, SorterObservationProjections\n",
+    "from map2loop.sampler import SamplerSpacing\n",
     "from datetime import datetime\n",
     "\n",
     "\n",
     "t0 = time.time()\n",
     "\n",
-    "bbox_3d = { # region of interest for GMD paper\n",
+    "# Set the region of interest for the project\n",
+    "bbox_3d = {\n",
     "    \"minx\": 515687.31005864,\n",
     "    \"miny\": 7493446.76593407,\n",
     "    \"maxx\": 562666.860106543,\n",
@@ -46,8 +58,10 @@
     "    \"base\": -3200,\n",
     "    \"top\": 3000,\n",
     "}\n",
-    "loop_project_filename=\"wa_output.loop3d\"\n",
     "\n",
+    "# Specify minimum details (which Australian state, projection and bounding box\n",
+    "# and output file)\n",
+    "loop_project_filename=\"wa_output.loop3d\"\n",
     "proj = Project( \n",
     "    use_australian_state_data = \"WA\",\n",
     "    working_projection = \"EPSG:28350\",\n",
@@ -55,8 +69,18 @@
     "    verbose_level = VerboseLevel.NONE,\n",
     "    loop_project_filename = loop_project_filename\n",
     ")\n",
+    "\n",
+    "# Set the distance between sample points for arial and linestring geometry\n",
+    "proj.set_sampler(Datatype.GEOLOGY, SamplerSpacing(200.0))\n",
+    "proj.set_sampler(Datatype.FAULT, SamplerSpacing(200.0))\n",
+    "\n",
+    "# Choose which stratigraphic sorter to use or run_all with \"take_best\" flag to run them all\n",
     "proj.set_sorter(SorterAlpha())\n",
     "# proj.set_sorter(SorterAgeBased())\n",
+    "# proj.set_sorter(SorterUseHint())\n",
+    "# proj.set_sorter(SorterUseNetworkx())\n",
+    "# proj.set_sorter(SorterMaximiseContacts())\n",
+    "# proj.set_sorter(SorterObservationProjections())\n",
     "proj.run_all(take_best=True)\n",
     "t1 = time.time()"
    ]
@@ -71,9 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import LoopProjectFile as LPF\n",
@@ -104,8 +126,9 @@
     "processedData.fault_properties['nelements'] = fault_params['nelements']\n",
     "\n",
     "model = LoopStructural.GeologicalModel.from_processor(processedData)\n",
+    "model.nsteps=np.array([200,200,50])\n",
     "model.update()\n",
-    "model.nsteps=np.array([2000,2000,200])\n",
+    "\n",
     "\n",
     "clip_on_dtm=True\n",
     "if(clip_on_dtm):\n",
@@ -127,7 +150,7 @@
     "# Lavavu viewer\n",
     "filename = os.path.join('.','vtk','surface_name_{}.vtk')\n",
     "view = LavaVuModelViewer(model)\n",
-    "view.nsteps=np.array([200,200,200])\n",
+    "view.nsteps=np.array([200,200,50])\n",
     "for sg in model.feature_name_index:\n",
     "    if( 'super' in sg):\n",
     "        view.add_data(model.features[model.feature_name_index[sg]])\n",
@@ -135,7 +158,7 @@
     "view.add_model_surfaces(filename=filename,faults=False)\n",
     "view.nelements=1e6\n",
     "view.add_model_surfaces(filename=filename,strati=False,displacement_cmap = 'rainbow')\n",
-    "view.nsteps = np.array([200,200,200])\n",
+    "view.nsteps = np.array([200,200,50])\n",
     "if(clip_on_dtm):\n",
     "    colours = list(pd.DataFrame(data=proj.stratigraphic_column.column,columns=[\"name\"]).merge(proj.stratigraphic_column.stratigraphicUnits[[\"name\",\"colour\"]], on=\"name\")[\"colour\"])\n",
     "    colours.reverse()\n",
@@ -193,7 +216,7 @@
    "outputs": [],
    "source": [
     "# Save raw map data to local zipped shapefiles\n",
-    "proj.save_mapdata_to_files(\"output_files\",\".shp.zip\")\n"
+    "proj.save_mapdata_to_files(\"output_files\",\".shp.zip\")"
    ]
   },
   {
@@ -221,6 +244,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Save geology map as a raster map in a specified projection (useful for overlays on online maps)\n",
+    "proj.save_geotiff_raster(filename=os.path.join(proj.map_data.tmp_path,\"geol.tif\"), projection=\"epsg:3857\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -240,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
