--- a/Example 3 - Local Source Data.ipynb
+++ b/Example 3 - Local Source Data.ipynb
@@ -17,6 +17,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#if not already installed:\n",
+    "#!conda install -c loop3d map2loop loopstructural pyamg meshio"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,9 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -46,6 +54,7 @@
     "\n",
     "t0 = time.time()\n",
     "\n",
+    "# Specify the boundary of the region of interest in the appropriate projection coordinates\n",
     "bounding_box = {\n",
     "    \"minx\": 520000,\n",
     "    \"miny\": 7490000,\n",
@@ -54,10 +63,11 @@
     "    \"base\": -3200,\n",
     "    \"top\": 1200,\n",
     "}\n",
+    "# Initialise the project with the shapefiles, dtm, config file\n",
+    "# output locations and projection to work in\n",
     "proj = Project( \n",
     "    geology_filename = \"./source_data/geol_clip.shp\",\n",
     "    fault_filename = \"./source_data/faults_clip.shp\",\n",
-    "    fold_filename = \"./source_data/folds_clip.shp\",\n",
     "    structure_filename = \"./source_data/structure_clip.shp\",\n",
     "    dtm_filename = './source_data/dtm_rp.tif',\n",
     "    config_filename = './source_data/example.hjson',\n",
@@ -69,12 +79,30 @@
     "    bounding_box = bounding_box,\n",
     "    loop_project_filename = loop_project_filename\n",
     ")\n",
+    "\n",
+    "# Remove faults less than 5km\n",
     "proj.set_minimum_fault_length(5000.0)\n",
-    "proj.set_sampler(Datatype.GEOLOGY, SamplerSpacing(50.0))\n",
+    "\n",
+    "# Set sampling distance for geology and fault maps to 200m\n",
+    "proj.set_sampler(Datatype.GEOLOGY, SamplerSpacing(200.0))\n",
+    "proj.set_sampler(Datatype.FAULT, SamplerSpacing(200.0))\n",
+    "\n",
+    "# Set to only take every second orientation observation (0 or 1 means take all observations)\n",
     "proj.set_sampler(Datatype.STRUCTURE, SamplerDecimator(2))\n",
+    "\n",
+    "# Set what text is expected for intrusions (contained within the description field)\n",
     "proj.map_data.config.geology_config[\"intrusive_text\"] = \"mafic intrusive\"\n",
+    "\n",
+    "# Set specific layers from the geology map to be ignored (commonly \"cover\" or \"water\")\n",
     "proj.set_ignore_codes([\"cover\", \"Fortescue_Group\", \"A_FO_od\"])\n",
     "\n",
+    "\n",
+    "# Specify which stratigraphic columns sorter to use, other options are\n",
+    "# (SorterAlpha, SorterAgeBased, SorterUseHint, SorterUseNetworkX, SorterMaximiseContacts, SorterObservationProjections)\n",
+    "proj.set_sorter(SorterAlpha())\n",
+    "proj.run_all()\n",
+    "\n",
+    "# Or you can run map2loop and pre-specify the stratigraphic column\n",
     "column = [\n",
     "    # youngest\n",
     "    'Turee_Creek_Group',\n",
@@ -91,10 +119,11 @@
     "    'Fortescue_Group',\n",
     "    # oldest\n",
     "]\n",
-    "# proj.set_sorter(SorterUseNetworkX())\n",
-    "proj.set_sorter(SorterAlpha())\n",
-    "proj.run_all(take_best=True)\n",
     "# proj.run_all(user_defined_stratigraphic_column=column)\n",
+    "\n",
+    "# Or you can get map2loop to run all column sorting algorithms it has and takes the one\n",
+    "# that has the longest total basal contact length\n",
+    "#proj.run_all(take_best=True)\n",
     "\n",
     "t1 = time.time()"
    ]
@@ -109,9 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import LoopProjectFile as LPF\n",
@@ -143,29 +170,34 @@
     "processedData.fault_properties['nelements'] = fault_params['nelements']\n",
     "\n",
     "model = LoopStructural.GeologicalModel.from_processor(processedData)\n",
+    "# model.nsteps=np.array([200,200,50])\n",
     "model.update()\n",
     "\n",
     "clip_on_dtm=True\n",
     "if(clip_on_dtm):\n",
     "    bounding_box = proj.map_data.get_bounding_box()\n",
-    "    minx = bounding_box['minx']\n",
-    "    maxx = bounding_box['maxx']\n",
-    "    miny = bounding_box['miny']\n",
-    "    maxy = bounding_box['maxy']\n",
     "    model_base = bounding_box['base']\n",
     "    model_top = bounding_box['top']\n",
-    "    dtm = gdal.Open(os.path.join(\"m2l_data_tmp\", \"StupidGDALLocalFile.tif\"))\n",
+    "    dtm = gdal.Open('./source_data/dtm_rp.tif')\n",
     "    dtm_val = dtm.GetRasterBand(1).ReadAsArray().T\n",
+    "    geoTrans = dtm.GetGeoTransform()\n",
+    "    minx = geoTrans[0]\n",
+    "    maxx = minx + dtm.RasterXSize * geoTrans[1]\n",
+    "    miny = geoTrans[3]\n",
+    "    maxy = miny + dtm.RasterYSize * geoTrans[5]\n",
+    "\n",
     "    # Convert bounds to gdal raster bounds\n",
-    "    x=np.linspace(minx,maxx,dtm_val.shape[0])\n",
-    "    y=np.linspace(miny,maxy,dtm_val.shape[0])\n",
+    "    x = np.linspace(minx,maxx,dtm.RasterXSize)\n",
+    "    y = np.linspace(miny,maxy,dtm.RasterYSize)\n",
     "    dtm_interpolator = RegularGridInterpolator((x,y),dtm_val)\n",
     "    model.dtm = lambda xyz : dtm_interpolator(xyz[:,:2])\n",
     "\n",
-    "vtk_path = model_name+'/vtk/'\n",
+    "vtk_path = os.path.join(model_name,'/vtk/')\n",
+    "if not os.path.exists(vtk_path):\n",
+    "    os.mkdir(vtk_path)\n",
     "filename = os.path.join(model_name,'vtk','surface_name_{}.vtk')\n",
     "view = LavaVuModelViewer(model)\n",
-    "view.nsteps=np.array([50,50,50])\n",
+    "view.nsteps=np.array([500,500,50])\n",
     "for sg in model.feature_name_index:\n",
     "    if( 'super' in sg):\n",
     "        view.add_data(model.features[model.feature_name_index[sg]])\n",
@@ -174,7 +206,7 @@
     "view.nelements=1e6\n",
     "view.add_model_surfaces(filename=filename,strati=False,displacement_cmap = 'rainbow')\n",
     "view.lv.webgl(vtk_path+model_name)\n",
-    "view.nsteps = np.array([200,200,200])\n",
+    "view.nsteps = np.array([2000,2000,200])\n",
     "if(clip_on_dtm):\n",
     "    colours = list(pd.DataFrame(data=proj.stratigraphic_column.column,columns=[\"name\"]).merge(proj.stratigraphic_column.stratigraphicUnits[[\"name\",\"colour\"]], on=\"name\")[\"colour\"])\n",
     "    colours.reverse()\n",
@@ -234,7 +266,7 @@
    "outputs": [],
    "source": [
     "# Extract estimate of the stratigraphic column\n",
-    "print(proj.stratigraphic_column.column)"
+    "proj.stratigraphic_column.column"
    ]
   },
   {
@@ -261,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
