Rename sorter class to be consistent with other classes

--- a/Example 4 - Creating our own geographical column sorter.ipynb
+++ b/Example 4 - Creating our own geographical column sorter.ipynb
@@ -45,10 +45,10 @@
     "import geopandas\n",
     "import pandas\n",
     "\n",
-    "class AlphabetSorter(Sorter):\n",
+    "class SorterAlphabet(Sorter):\n",
     "    # Name this sorter in the init function\n",
     "    def __init__(self):\n",
-    "        self.sorter_label = \"AlphabetSorter\"\n",
+    "        self.sorter_label = \"SorterAlphabet\"\n",
     "\n",
     "    # The structure of the sort function MUST match the Sorter sort function as it is\n",
     "    # replacing that abstract function\n",
@@ -147,7 +147,7 @@
    "outputs": [],
    "source": [
     "# This step sets the newly created sorter as the one map2loop will use\n",
-    "proj.set_sorter(AlphabetSorter())\n",
+    "proj.set_sorter(SorterAlphabet())\n",
     "proj.run_all()"
    ]
   },
