fix: Updates to examples to match newest m2l and ls

--- a/Example 1 - Using Loop's Sources.ipynb
+++ b/Example 1 - Using Loop's Sources.ipynb
@@ -29,6 +29,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Optional:\n",
+    "Create a config dictionary that specifies the column names and description texts to process the shape files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_dict = {\n",
+    "    \"structure\" : {\n",
+    "        \"orientation_type\": \"strike\",\n",
+    "        \"dipdir_column\": \"strike\",\n",
+    "        \"dip_column\": \"dip\",\n",
+    "        \"description_column\": \"feature\",\n",
+    "        \"bedding_text\": \"Bed\",\n",
+    "        \"overturned_column\": \"structypei\",\n",
+    "        \"overturned_text\": \"BEOI\",\n",
+    "        \"objectid_column\": \"geopnt_id\",\n",
+    "    },\n",
+    "    \"geology\" : {\n",
+    "        \"unitname_column\": \"unitname\",\n",
+    "        \"alt_unitname_column\": \"code\",\n",
+    "        \"group_column\": \"group_\",\n",
+    "        \"supergroup_column\": \"supersuite\",\n",
+    "        \"description_column\": \"descriptn\",\n",
+    "        \"minage_column\": \"min_age_ma\",\n",
+    "        \"maxage_column\": \"max_age_ma\",\n",
+    "        \"rocktype_column\": \"rocktype1\",\n",
+    "        \"alt_rocktype_column\": \"rocktype2\",\n",
+    "        \"sill_text\": \"is a sill\",\n",
+    "        \"intrusive_text\": \"intrusive\",\n",
+    "        \"volcanic_text\": \"volcanic\",\n",
+    "        \"objectid_column\": \"objectid\",\n",
+    "        \"ignore_codes\": [\"cover\"],\n",
+    "    },\n",
+    "    \"fault\" : {\n",
+    "        \"structtype_column\": \"feature\",\n",
+    "        \"fault_text\": \"Fault\",\n",
+    "        \"dip_null_value\": \"0\",\n",
+    "        \"dipdir_flag\": \"num\",\n",
+    "        \"dipdir_column\": \"dip_dir\",\n",
+    "        \"dip_column\": \"dip\",\n",
+    "        \"orientation_type\": \"dip direction\",\n",
+    "        \"dipestimate_column\": \"dip_est\",\n",
+    "        \"dipestimate_text\": \"gentle,moderate,steep\",\n",
+    "        \"name_column\": \"name\",\n",
+    "        \"objectid_column\": \"objectid\",\n",
+    "    },\n",
+    "    \"fold\" : {\n",
+    "        \"structtype_column\": \"feature\",\n",
+    "        \"fold_text\": \"Fold axial trace\",\n",
+    "        \"description_column\": \"type\",\n",
+    "        \"synform_text\": \"syncline\",\n",
+    "        \"foldname_column\": \"name\",\n",
+    "        \"objectid_column\": \"objectid\",\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Map2Loop"
    ]
   },
@@ -43,9 +108,11 @@
     "from map2loop.project import Project\n",
     "from map2loop.m2l_enums import VerboseLevel, Datatype\n",
     "from map2loop.sorter import SorterAlpha, SorterAgeBased, SorterUseHint, SorterUseNetworkX, SorterMaximiseContacts, SorterObservationProjections\n",
+    "from map2loop.thickness_calculator import ThicknessCalculatorAlpha, InterpolatedStructure, StructuralPoint\n",
     "from map2loop.sampler import SamplerSpacing\n",
     "from datetime import datetime\n",
     "\n",
+    "# os.environ[\"DOCUMENTATION_TEST\"] = \"True\"\n",
     "\n",
     "t0 = time.time()\n",
     "\n",
@@ -59,30 +126,92 @@
     "    \"top\": 3000,\n",
     "}\n",
     "\n",
-    "# Specify minimum details (which Australian state, projection and bounding box\n",
-    "# and output file)\n",
+    "# Specify minimum details (Australian state, projection, bounding box and output file)\n",
+    "# Optional: the config information manually created in the config_dict can be used by\n",
+    "# setting the parameter config_dictionary\n",
     "loop_project_filename=\"wa_output.loop3d\"\n",
     "proj = Project( \n",
     "    use_australian_state_data = \"WA\",\n",
+    "    # config_dictionary = config_dict,\n",
     "    working_projection = \"EPSG:28350\",\n",
     "    bounding_box = bbox_3d,\n",
     "    verbose_level = VerboseLevel.NONE,\n",
-    "    loop_project_filename = loop_project_filename\n",
+    "    loop_project_filename = loop_project_filename,\n",
+    "    overwrite_loopprojectfile = True\n",
     ")\n",
+    "\n",
+    "# Specify that the text to look for (in the unit description) to indicate a sill is not just \"sill\"\n",
+    "proj.map_data.config.update_from_dictionary({\"geology\": {\"sill_text\":\"is a sill\"}})\n",
     "\n",
     "# Set the distance between sample points for arial and linestring geometry\n",
     "proj.set_sampler(Datatype.GEOLOGY, SamplerSpacing(200.0))\n",
     "proj.set_sampler(Datatype.FAULT, SamplerSpacing(200.0))\n",
     "\n",
+    "# Choose which thickness calculator to use\n",
+    "# proj.set_thickness_calculator(ThicknessCalculatorAlpha())\n",
+    "# proj.set_thickness_calculator(InterpolatedStructure())\n",
+    "proj.set_thickness_calculator(StructuralPoint())\n",
+    "\n",
     "# Choose which stratigraphic sorter to use or run_all with \"take_best\" flag to run them all\n",
-    "proj.set_sorter(SorterAlpha())\n",
+    "# proj.set_sorter(SorterAlpha())\n",
     "# proj.set_sorter(SorterAgeBased())\n",
     "# proj.set_sorter(SorterUseHint())\n",
-    "# proj.set_sorter(SorterUseNetworkx())\n",
+    "proj.set_sorter(SorterUseNetworkX())\n",
     "# proj.set_sorter(SorterMaximiseContacts())\n",
     "# proj.set_sorter(SorterObservationProjections())\n",
-    "proj.run_all(take_best=True)\n",
+    "proj.run_all()\n",
+    "\n",
+    "#   or\n",
+    "# proj.run_all(take_best=True)\n",
+    "\n",
     "t1 = time.time()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract Information from project"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save raw map data to local zipped shapefiles\n",
+    "proj.save_mapdata_to_files(\"output_files\",\".shp.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Draw overlay of point data on geology map (can also try 'contacts','orientations','faults')\n",
+    "proj.draw_geology_map(overlay=\"contacts\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract map2loop estimate of the stratigraphic column\n",
+    "print(proj.stratigraphic_column.column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save geology map as a raster map in a specified projection (useful for overlays on online maps)\n",
+    "proj.save_geotiff_raster(filename=os.path.join(proj.map_data.tmp_path,\"geol.tif\"), projection=\"epsg:3857\")"
    ]
   },
   {
@@ -95,7 +224,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import LoopProjectFile as LPF\n",
@@ -150,7 +281,7 @@
     "# Lavavu viewer\n",
     "filename = os.path.join('.','vtk','surface_name_{}.vtk')\n",
     "view = LavaVuModelViewer(model)\n",
-    "view.nsteps=np.array([200,200,50])\n",
+    "view.nsteps=np.array([500,500,50])\n",
     "for sg in model.feature_name_index:\n",
     "    if( 'super' in sg):\n",
     "        view.add_data(model.features[model.feature_name_index[sg]])\n",
@@ -158,7 +289,7 @@
     "view.add_model_surfaces(filename=filename,faults=False)\n",
     "view.nelements=1e6\n",
     "view.add_model_surfaces(filename=filename,strati=False,displacement_cmap = 'rainbow')\n",
-    "view.nsteps = np.array([200,200,50])\n",
+    "view.nsteps = np.array([500,500,50])\n",
     "if(clip_on_dtm):\n",
     "    colours = list(pd.DataFrame(data=proj.stratigraphic_column.column,columns=[\"name\"]).merge(proj.stratigraphic_column.stratigraphicUnits[[\"name\",\"colour\"]], on=\"name\")[\"colour\"])\n",
     "    colours.reverse()\n",
@@ -203,53 +334,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Extract Information from project"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save raw map data to local zipped shapefiles\n",
-    "proj.save_mapdata_to_files(\"output_files\",\".shp.zip\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Draw overlay of point data on geology map (can also try 'contacts','orientations','faults')\n",
-    "proj.draw_geology_map(overlay=\"basal_contacts\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extract map2loop estimate of the stratigraphic column\n",
-    "print(proj.stratigraphic_column.column)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save geology map as a raster map in a specified projection (useful for overlays on online maps)\n",
-    "proj.save_geotiff_raster(filename=os.path.join(proj.map_data.tmp_path,\"geol.tif\"), projection=\"epsg:3857\")"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -273,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
