--- a/Example 3 - Local Source Data.ipynb
+++ b/Example 3 - Local Source Data.ipynb
@@ -77,7 +77,8 @@
     "    tmp_path = model_name,\n",
     "    working_projection = \"EPSG:28350\",\n",
     "    bounding_box = bounding_box,\n",
-    "    loop_project_filename = loop_project_filename\n",
+    "    loop_project_filename = loop_project_filename,\n",
+    "    overwrite_loopprojectfile = True\n",
     ")\n",
     "\n",
     "# Remove faults less than 5km\n",
@@ -100,7 +101,6 @@
     "# Specify which stratigraphic columns sorter to use, other options are\n",
     "# (SorterAlpha, SorterAgeBased, SorterUseHint, SorterUseNetworkX, SorterMaximiseContacts, SorterObservationProjections)\n",
     "proj.set_sorter(SorterAlpha())\n",
-    "proj.run_all()\n",
     "\n",
     "# Or you can run map2loop and pre-specify the stratigraphic column\n",
     "column = [\n",
@@ -119,13 +119,35 @@
     "    'Fortescue_Group',\n",
     "    # oldest\n",
     "]\n",
-    "# proj.run_all(user_defined_stratigraphic_column=column)\n",
+    "proj.run_all(user_defined_stratigraphic_column=column)\n",
     "\n",
     "# Or you can get map2loop to run all column sorting algorithms it has and takes the one\n",
     "# that has the longest total basal contact length\n",
     "#proj.run_all(take_best=True)\n",
+    "proj.run_all()\n",
     "\n",
     "t1 = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Draw overlay of point data on geology map\n",
+    "# (options are 'basal_contacts', contacts','orientations','faults')\n",
+    "proj.draw_geology_map(overlay=\"basal_contacts\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract estimate of the stratigraphic column\n",
+    "proj.stratigraphic_column.column"
    ]
   },
   {
@@ -192,7 +214,7 @@
     "    dtm_interpolator = RegularGridInterpolator((x,y),dtm_val)\n",
     "    model.dtm = lambda xyz : dtm_interpolator(xyz[:,:2])\n",
     "\n",
-    "vtk_path = os.path.join(model_name,'/vtk/')\n",
+    "vtk_path = os.path.join(model_name,'vtk')\n",
     "if not os.path.exists(vtk_path):\n",
     "    os.mkdir(vtk_path)\n",
     "filename = os.path.join(model_name,'vtk','surface_name_{}.vtk')\n",
@@ -206,7 +228,7 @@
     "view.nelements=1e6\n",
     "view.add_model_surfaces(filename=filename,strati=False,displacement_cmap = 'rainbow')\n",
     "view.lv.webgl(vtk_path+model_name)\n",
-    "view.nsteps = np.array([2000,2000,200])\n",
+    "view.nsteps = np.array([500,500,50])\n",
     "if(clip_on_dtm):\n",
     "    colours = list(pd.DataFrame(data=proj.stratigraphic_column.column,columns=[\"name\"]).merge(proj.stratigraphic_column.stratigraphicUnits[[\"name\",\"colour\"]], on=\"name\")[\"colour\"])\n",
     "    colours.reverse()\n",
@@ -253,27 +275,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Draw overlay of point data on geology map\n",
-    "# (options are 'basal_contacts', contacts','orientations','faults')\n",
-    "proj.draw_geology_map(overlay=\"basal_contacts\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extract estimate of the stratigraphic column\n",
-    "proj.stratigraphic_column.column"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
@@ -293,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
