--- a/Example 5 - Creating our own thickness calculator.ipynb
+++ b/Example 5 - Creating our own thickness calculator.ipynb
@@ -58,6 +58,7 @@
     "        units: pandas.DataFrame,\n",
     "        stratigraphic_order: list,\n",
     "        basal_contacts: pandas.DataFrame,\n",
+    "        structure_samples: pandas.DataFrame,\n",
     "        map_data: MapData,\n",
     "    ) -> pandas.DataFrame:\n",
     "        # The output of this function is the units pandas.dataframe\n",
@@ -194,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
