fix: Update to use the new versions of m2l and ls:

--- a/Example 2 - Draw Your Own Area.ipynb
+++ b/Example 2 - Draw Your Own Area.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "#if not already installed:\n",
     "#!conda install -c loop3d map2loop loopstructural pyamg meshio\n",
-    "#!conda install -c conda-forge leafmap ipyleaflet ipywidgets -y\n",
+    "#!conda install -c conda-forge leafmap ipyleaflet ipywidgets jupyter-ipywidgets jupyter-nbextension -y\n",
     "# and\n",
     "#!pip install geoh5py\n",
     "# may need to restart jupyter server\n",
@@ -184,7 +184,9 @@
     "\n",
     "if( not test_data_name =='Draw Your Own'):\n",
     "    m.add_gdf(rect, layer_name=\"Last Rectangle\", \n",
-    "                   fill_colors=['orange'])\n"
+    "                   fill_colors=['orange'])\n",
+    "\n",
+    "display(m)"
    ]
   },
   {
@@ -254,13 +256,9 @@
     "import os\n",
     "from map2loop.project import Project\n",
     "from map2loop.m2l_enums import VerboseLevel\n",
+    "from map2loop.thickness_calculator import StructuralPoint\n",
     "from datetime import datetime\n",
-    "import time\n",
-    "import warnings\n",
     "\n",
-    "\n",
-    "t0 = time.time()\n",
-    "warnings.filterwarnings('ignore')\n",
     "nowtime=datetime.now().isoformat(timespec='minutes')\n",
     "bbox_3d={\n",
     "    \"minx\": mbbox.total_bounds[0], #500000,\n",
@@ -278,16 +276,36 @@
     "    tmp_path  = model_name,\n",
     "    working_projection = \"EPSG:28350\",\n",
     "    bounding_box = bbox_3d,\n",
-    "    loop_project_filename = loop_project_filename\n",
+    "    loop_project_filename = loop_project_filename,\n",
+    "    overwrite_loopprojectfile = True\n",
     ")\n",
     "\n",
-    "proj.run_all()\n",
-    "# %load_ext snakeviz\n",
-    "# %snakeviz proj.run()\n",
-    "t1 = time.time()\n",
-    "m2l_time = t1-t0\n",
-    "m2l_string = f\"{m2l_time} seconds\" if m2l_time < 60 else f\"{m2l_time/60.0} minutes\"\n",
-    "print(f\"map2loop {m2l_string}\")"
+    "proj.set_thickness_calculator(StructuralPoint())\n",
+    "proj.run_all(take_best=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Draw overlay of point data on geology map (can also try 'contacts','orientations','faults')\n",
+    "proj.draw_geology_map(overlay=\"contacts\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import LoopProjectFile as LPF\n",
+    "loop_project_filename=\"wa_output.loop3d\"\n",
+    "projFile = LPF.ProjectFile(loop_project_filename)\n",
+    "projFile.stratigraphicLog.ThicknessMedian\n",
+    "\n",
+    "projFile.stratigraphicLog"
    ]
   },
   {
@@ -308,6 +326,7 @@
     "vtk_path=model_name+'/vtk/'\n",
     "if not os.path.exists(vtk_path):\n",
     "    os.mkdir(vtk_path)\n",
+    "filename=vtk_path+'/'+'surface_name_{}.vtk'\n",
     "\n",
     "bounding_box = proj.map_data.get_bounding_box()\n",
     "minx = bounding_box['minx']\n",
@@ -326,23 +345,42 @@
    "source": [
     "import LoopProjectFile as LPF\n",
     "import LoopStructural\n",
-    "from LoopStructural.visualisation import LavaVuModelViewer\n",
     "from LoopStructural.modelling.input.project_file import LoopProjectfileProcessor as LPFProcessor\n",
-    "from datetime import datetime\n",
-    "import os\n",
-    "import time\n",
-    "from datetime import datetime\n",
-    "import shutil\n",
-    "import logging\n",
-    "#logging.getLogger().setLevel(logging.ERROR)\n",
-    "import lavavu\n",
-    "import numpy as np\n",
-    "import math\n",
-    "# from map2loop.m2l_utils import save_dtm_mesh, save_dtm_ascii\n",
-    "# from map2loop.map import MapUtil\n",
-    "# import rasterio\n",
-    "from scipy.interpolate import RegularGridInterpolator\n",
-    "from osgeo import gdal\n",
+    "\n",
+    "projFile = LPF.ProjectFile(loop_project_filename)\n",
+    "processedData = LPFProcessor(projFile)\n",
+    "model = LoopStructural.GeologicalModel.from_processor(processedData)\n",
+    "model.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create viewer for Loop Structural output\n",
+    "from LoopStructural.visualisation import Loop3DView\n",
+    "view = Loop3DView(model, window_size=[1200,800])\n",
+    "view.plot_model_surfaces(fault_colour=\"red\")\n",
+    "\n",
+    "# Add dtm method not currently implimented but will be coming soon\n",
+    "#view.add_dtm()\n",
+    "\n",
+    "# Set inital camera position and orientation\n",
+    "view.camera_position = \"xz\"\n",
+    "view.camera.elevation = 40\n",
+    "\n",
+    "view.show(jupyter_backend='client')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_vtk=True\n",
     "\n",
     "surface_verts = {}\n",
     "\n",
@@ -356,96 +394,6 @@
     "    tri = tri[np.all(tri > -1,axis=1),:]\n",
     "    xyz = xyz[nanmask,:]\n",
     "    surface_verts[name] = (xyz,tri)\n",
-    "    \n",
-    "t2 = time.time()\n",
-    "\n",
-    "filename=vtk_path+'/'+'surface_name_{}.vtk'\n",
-    "\n",
-    "fault_params = {\n",
-    "    'interpolatortype':'FDI',\n",
-    "    'nelements':1e4,\n",
-    "}\n",
-    "foliation_params = {\n",
-    "    'interpolatortype':'FDI' , # 'interpolatortype':'PLI',\n",
-    "    'nelements':1e5,  # how many tetras/voxels\n",
-    "    'regularisation':5,\n",
-    "}\n",
-    "projFile = LPF.ProjectFile(loop_project_filename)\n",
-    "processedData = LPFProcessor(projFile)\n",
-    "processedData.foliation_properties['sg'] = foliation_params\n",
-    "processedData.fault_properties['interpolatortype'] = fault_params['interpolatortype']\n",
-    "processedData.fault_properties['nelements'] = fault_params['nelements']\n",
-    "model = LoopStructural.GeologicalModel.from_processor(processedData)\n",
-    "model.update()\n",
-    "\n",
-    "clip_on_dtm=True\n",
-    "if(clip_on_dtm):\n",
-    "    dtm = gdal.Open(os.path.join(model_name, \"StupidGDALLocalFile.tif\"))\n",
-    "    dtm_val = dtm.GetRasterBand(1).ReadAsArray().T\n",
-    "    # Convert bounds to gdal raster bounds\n",
-    "    x=np.linspace(minx,maxx,dtm_val.shape[0])\n",
-    "    y=np.linspace(miny,maxy,dtm_val.shape[0])\n",
-    "    dtm_interpolator = RegularGridInterpolator((x,y),dtm_val)\n",
-    "    model.dtm = lambda xyz : dtm_interpolator(xyz[:,:2])\n",
-    "\n",
-    "view = LavaVuModelViewer(model) \n",
-    "view.nsteps = np.array([200,200,200])\n",
-    "for sg in model.feature_name_index:\n",
-    "    if( 'super' in sg):\n",
-    "        view.add_data(model.features[model.feature_name_index[sg]])\n",
-    "view.nelements = 1e5\n",
-    "view.add_model_surfaces(function=function,filename=filename,faults=False)\n",
-    "view.nelements=1e6\n",
-    "view.add_model_surfaces(function=function,filename=filename,strati=False,displacement_cmap = 'rainbow')\n",
-    "if(clip_on_dtm):\n",
-    "    colours = list(pd.DataFrame(data=proj.stratigraphic_column.column,columns=[\"name\"]).merge(proj.stratigraphic_column.stratigraphicUnits[[\"name\",\"colour\"]], on=\"name\")[\"colour\"])\n",
-    "    colours.reverse()\n",
-    "    view.add_dtm(paint_with=lambda xyz: model.evaluate_model(xyz,scale=False), cmap=colours)\n",
-    "view.lv.webgl(vtk_path+model_name)\n",
-    "view.nsteps = np.array([200,200,200])\n",
-    "view.add_model()\n",
-    "\n",
-    "view.lv.control.Range('alpha', label=\"Global Opacity\")\n",
-    "view.lv.control.DualRange(['xmin', 'xmax'], label=\"x clip\", step=0.01, values=[0.0,1.0])\n",
-    "view.lv.control.DualRange(['ymin', 'ymax'], label=\"y clip\", step=0.01, values=[0.0,1.0])\n",
-    "view.lv.control.DualRange(['zmin', 'zmax'], label=\"z clip\", step=0.01, values=[0.0,1.0])\n",
-    "view.lv.control.Range(command='background', range=(0,1), step=0.1, value=0.8)\n",
-    "view.lv.control.show() #Show the control panel, including the viewer window\n",
-    "\n",
-    "# for layer in surface_verts:\n",
-    "#     f=open(vtk_path+layer.replace(\"_iso_0.000000\",\"\")+'.obj','w')\n",
-    "#     vert=surface_verts[layer][0].shape[0]\n",
-    "#     tri=surface_verts[layer][1].shape[0]\n",
-    "#     #print(layer.replace(\"_iso_0.000000\",\"\"),vert,tri)\n",
-    "#     for v in range(0,vert):\n",
-    "#         ostr = \"v {} {} {}\\n\"\\\n",
-    "#             .format(surface_verts[layer][0][v][0],surface_verts[layer][0][v][1],surface_verts[layer][0][v][2])\n",
-    "#         f.write(ostr)\n",
-    "#     for t in range(0,tri):\n",
-    "#         ostr = \"f {} {} {}\\n\"\\\n",
-    "#                 .format(surface_verts[layer][1][t][0]+1,surface_verts[layer][1][t][1]+1,surface_verts[layer][1][t][2]+1)\n",
-    "#         f.write(ostr)\n",
-    "#     first=False\n",
-    "#     f.close()\n",
-    "    \n",
-    "view.interactive()  \n",
-    "\n",
-    "t3 = time.time()\n",
-    "ls_time = t3-t2\n",
-    "ls_string = f\"{ls_time} seconds\" if ls_time < 60 else f\"{ls_time/60.0} minutes\"\n",
-    "total = t3-t0\n",
-    "print(f\"LoopStructural {ls_string}\")\n",
-    "total_string = f\"{total} sec\" if total < 60 else f\"{total/60.0} min\"\n",
-    "print(f\"Total time {total_string}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_vtk=True\n",
     "\n",
     "if(save_vtk):\n",
     "    from LoopStructural.visualisation.vtk_exporter import VtkExporter\n",
@@ -580,15 +528,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "view.interactive()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
@@ -608,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
