--- a/Example 5 - Creating our own thickness calculator.ipynb
+++ b/Example 5 - Creating our own thickness calculator.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "#if not already installed:\n",
-    "#!conda install -c loop3d map2loop loopstructural pyamg meshio"
+    "#!conda install -c loop3d map2loop"
    ]
   },
   {
@@ -110,14 +110,14 @@
     "    fault_filename = \"./source_data/faults_clip.shp\",\n",
     "    structure_filename = \"./source_data/structure_clip.shp\",\n",
     "    dtm_filename = './source_data/dtm_rp.tif',\n",
-    "    config_filename = './source_data/example.hjson',\n",
+    "    config_filename = './source_data/example.json',\n",
     "    clut_filename = './source_data/500kibg_colours.csv',\n",
-    "    clut_file_legacy = True,\n",
     "    verbose_level = VerboseLevel.NONE,\n",
     "    tmp_path = model_name,\n",
     "    working_projection = \"EPSG:28350\",\n",
     "    bounding_box = bounding_box,\n",
-    "    loop_project_filename = loop_project_filename\n",
+    "    loop_project_filename = loop_project_filename,\n",
+    "    overwrite_loopprojectfile = True\n",
     ")\n",
     "\n",
     "# Remove faults less than 5km\n",
