--- a/Example 3 - Local Source Data.ipynb
+++ b/Example 3 - Local Source Data.ipynb
@@ -23,7 +23,21 @@
    "outputs": [],
    "source": [
     "#if not already installed:\n",
-    "#!conda install -c loop3d map2loop loopstructural pyamg meshio"
+    "#!conda install -c loop3d loopprojectfile map2loop loopstructural pyamg meshio \n",
+    "#!conda install pyvista trame trame-vuetify trame-vtk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if pyvista keeps crashing the jupyter notebook (often in Windows), creating\n",
+    "# a very simple pyvista plotter before-hand often fixes this issue\n",
+    "\n",
+    "import pyvista\n",
+    "pyvista.Plotter(window_size=[1,1]).show()"
    ]
   },
   {
@@ -70,9 +84,8 @@
     "    fault_filename = \"./source_data/faults_clip.shp\",\n",
     "    structure_filename = \"./source_data/structure_clip.shp\",\n",
     "    dtm_filename = './source_data/dtm_rp.tif',\n",
-    "    config_filename = './source_data/example.hjson',\n",
+    "    config_filename = './source_data/example.json',\n",
     "    clut_filename = './source_data/500kibg_colours.csv',\n",
-    "    clut_file_legacy = True,\n",
     "    verbose_level = VerboseLevel.NONE,\n",
     "    tmp_path = model_name,\n",
     "    working_projection = \"EPSG:28350\",\n",
@@ -124,7 +137,7 @@
     "# Or you can get map2loop to run all column sorting algorithms it has and takes the one\n",
     "# that has the longest total basal contact length\n",
     "#proj.run_all(take_best=True)\n",
-    "proj.run_all()\n",
+    "# proj.run_all()\n",
     "\n",
     "t1 = time.time()"
    ]
@@ -164,86 +177,65 @@
    "outputs": [],
    "source": [
     "import LoopProjectFile as LPF\n",
-    "from LoopStructural.visualisation import LavaVuModelViewer\n",
-    "from LoopStructural.modelling.input.project_file import LoopProjectfileProcessor as LPFProcessor\n",
     "import LoopStructural\n",
-    "import numpy as np\n",
-    "from scipy.interpolate import RegularGridInterpolator\n",
-    "from osgeo import gdal\n",
-    "import pandas as pd\n",
+    "from LoopStructural.modelling.input.project_file import LoopProjectfileProcessor as LPFProcessor\n",
     "\n",
+    "# LoopStructural Modelling\n",
     "t2 = time.time()\n",
-    "\n",
-    "LPFilename = loop_project_filename\n",
+    "# Set parameters for fault and foliation \n",
+    " # Alternate 'interpolatortype':'PLI',\n",
     "fault_params = {\n",
     "    'interpolatortype':'FDI',\n",
     "    'nelements':1e4,\n",
     "}\n",
     "foliation_params = {\n",
-    "    'interpolatortype':'FDI' , # 'interpolatortype':'PLI',\n",
+    "    'interpolatortype':'FDI' ,\n",
     "    'nelements':1e5,  # how many tetras/voxels\n",
-    "    'regularisation':5,\n",
+    "    'regularisation':25,\n",
     "}\n",
-    "\n",
-    "projFile = LPF.ProjectFile(LPFilename)\n",
+    "projFile = LPF.ProjectFile(loop_project_filename)\n",
     "processedData = LPFProcessor(projFile)\n",
-    "processedData.foliation_properties['sg'] = foliation_params\n",
-    "processedData.fault_properties['interpolatortype'] = fault_params['interpolatortype']\n",
-    "processedData.fault_properties['nelements'] = fault_params['nelements']\n",
+    "#processedData.foliation_properties['sg'] = foliation_params\n",
+    "#processedData.fault_properties['interpolatortype'] = fault_params['interpolatortype']\n",
+    "#processedData.fault_properties['nelements'] = fault_params['nelements']\n",
     "\n",
     "model = LoopStructural.GeologicalModel.from_processor(processedData)\n",
-    "# model.nsteps=np.array([200,200,50])\n",
+    "#model.nsteps=np.array([200,200,50])\n",
     "model.update()\n",
     "\n",
-    "clip_on_dtm=True\n",
-    "if(clip_on_dtm):\n",
-    "    bounding_box = proj.map_data.get_bounding_box()\n",
-    "    model_base = bounding_box['base']\n",
-    "    model_top = bounding_box['top']\n",
-    "    dtm = gdal.Open('./source_data/dtm_rp.tif')\n",
-    "    dtm_val = dtm.GetRasterBand(1).ReadAsArray().T\n",
-    "    geoTrans = dtm.GetGeoTransform()\n",
-    "    minx = geoTrans[0]\n",
-    "    maxx = minx + dtm.RasterXSize * geoTrans[1]\n",
-    "    miny = geoTrans[3]\n",
-    "    maxy = miny + dtm.RasterYSize * geoTrans[5]\n",
-    "\n",
-    "    # Convert bounds to gdal raster bounds\n",
-    "    x = np.linspace(minx,maxx,dtm.RasterXSize)\n",
-    "    y = np.linspace(miny,maxy,dtm.RasterYSize)\n",
-    "    dtm_interpolator = RegularGridInterpolator((x,y),dtm_val)\n",
-    "    model.dtm = lambda xyz : dtm_interpolator(xyz[:,:2])\n",
-    "\n",
-    "vtk_path = os.path.join(model_name,'vtk')\n",
-    "if not os.path.exists(vtk_path):\n",
-    "    os.mkdir(vtk_path)\n",
-    "filename = os.path.join(model_name,'vtk','surface_name_{}.vtk')\n",
-    "view = LavaVuModelViewer(model)\n",
-    "view.nsteps=np.array([500,500,50])\n",
-    "for sg in model.feature_name_index:\n",
-    "    if( 'super' in sg):\n",
-    "        view.add_data(model.features[model.feature_name_index[sg]])\n",
-    "view.nelements = 1e5\n",
-    "view.add_model_surfaces(filename=filename,faults=False)\n",
-    "view.nelements=1e6\n",
-    "view.add_model_surfaces(filename=filename,strati=False,displacement_cmap = 'rainbow')\n",
-    "view.lv.webgl(vtk_path+model_name)\n",
-    "view.nsteps = np.array([500,500,50])\n",
-    "if(clip_on_dtm):\n",
-    "    colours = list(pd.DataFrame(data=proj.stratigraphic_column.column,columns=[\"name\"]).merge(proj.stratigraphic_column.stratigraphicUnits[[\"name\",\"colour\"]], on=\"name\")[\"colour\"])\n",
-    "    colours.reverse()\n",
-    "    view.add_dtm(paint_with=lambda xyz: model.evaluate_model(xyz,scale=False), cmap=colours)\n",
-    "view.add_model()\n",
-    "\n",
-    "view.lv.control.Range('alpha', label=\"Global Opacity\")\n",
-    "view.lv.control.DualRange(['xmin', 'xmax'], label=\"x clip\", step=0.01, values=[0.0,1.0])\n",
-    "view.lv.control.DualRange(['ymin', 'ymax'], label=\"y clip\", step=0.01, values=[0.0,1.0])\n",
-    "view.lv.control.DualRange(['zmin', 'zmax'], label=\"z clip\", step=0.01, values=[0.0,1.0])\n",
-    "view.lv.control.Range(command='background', range=(0,1), step=0.1, value=0.8)\n",
-    "view.lv.control.show() #Show the control panel, including the viewer window\n",
-    "view.interactive()\n",
-    "\n",
     "t3 = time.time()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## View 3D Data from Loop Structural"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t4 = time.time()\n",
+    "\n",
+    "# Create viewer for Loop Structural output\n",
+    "from LoopStructural.visualisation import Loop3DView\n",
+    "view = Loop3DView(model, window_size=[800,600])\n",
+    "view.plot_model_surfaces(fault_colour=\"red\")\n",
+    "\n",
+    "# Add dtm method not currently implimented but will be coming soon\n",
+    "#view.add_dtm()\n",
+    "\n",
+    "# Set inital camera position and orientation\n",
+    "view.camera_position = \"xz\"\n",
+    "view.camera.elevation = 40\n",
+    "\n",
+    "view.show(jupyter_backend='client')\n",
+    "\n",
+    "t5 = time.time()"
    ]
   },
   {
@@ -262,12 +254,14 @@
     "# Print element and total processing time\n",
     "m2l_time = t1-t0\n",
     "ls_time = t3-t2\n",
-    "total = t3-t0\n",
+    "viewer_time = t5-t4\n",
+    "total = t5-t0\n",
     "\n",
     "m2l_string = f\"{m2l_time} sec\" if m2l_time < 60 else f\"{m2l_time/60.0} min\"\n",
     "ls_string = f\"{ls_time} sec\" if ls_time < 60 else f\"{ls_time/60.0} min\"\n",
+    "viewer_string = f\"{viewer_time} sec\" if viewer_time < 60 else f\"{viewer_time/60.0} min\"\n",
     "total_string = f\"{total} sec\" if total < 60 else f\"{total/60.0} min\"\n",
-    "print(f\"map2loop {m2l_string}, LoopStructural {ls_string}, Total {total_string}\")"
+    "print(f\" Map2loop {m2l_string}\\n LoopStructural {ls_string}\\n Viewer {viewer_string}\\n Total {total_string}\")"
    ]
   },
   {
